# celery-worker

./: .cursorrules  .env.example  .gitignore  Dockerfile  README.md  RUN.md  api.py  config.py  docker-compose.yml  pyproject.toml  worker.py
.cursor/plans/: fastapi_celery_project_plan_6591b345.plan.md  plan_1_init_project.plan.md  plan_2_zendesk_openai_db.plan.md
.cursor/rules/: ai-code-style-reference.mdc  azure-deploy-full.mdc  celery-redis-infra.mdc  celery-testing-local-azure.mdc  celery-worker-tasks.mdc  flyway-migrations.mdc  openai-setup.mdc  postgres-setup.mdc  toy-azure-minimal.mdc  toy-docker-local.mdc  toy-greenfield-scaffold.mdc
.cursor/skills/celery-redis-jobs/: SKILL.md  flyway-migrations.md  reference.md  setup.md  zendesk-full-flow.md
.cursor/skills/toy-celery-verify-local-azure/: SKILL.md  checklist.md
.cursor/skills/toy-fastapi-celery-scaffold/: SKILL.md  examples.md
clients/: zendesk_client.py
db/migration/: V1__create_zendesk_tables.sql
lib/: zendesk_llm_limiter.py
models/: __init__.py  zendesk.py
services/: openai_summary.py  zendesk_service.py
storage/: database.py
tasks/: _async.py  jobs.py  zendesk.py
